fixed spacing issues on search users drop down menu

--- a/front-end/src/Components/component-styling/userHeader.css
+++ b/front-end/src/Components/component-styling/userHeader.css
@@ -215,7 +215,7 @@
 #user-search-list {
   width: 100%;
   height: 100%;
-  gap: 0.5em;
+  gap: 1em;
   display: flex;
   flex-direction: column;
   overflow: auto;
